Upgrade bundled Tomcat version to 6.0.24
git-svn-id: svn://localhost/jahia/trunk@4850 69c369ed-ed09-0410-a4a1-e19a46c23626